# chatCortex

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
chatcortex/: __init__.py  config.py  engine.py  exceptions.py  ingestion.py  retriever.py  session.py
chatcortex/evaluation/: approximation_metrics.py  harness.py
chatcortex/execution/: executor.py
chatcortex/graph/: agent_graph.py
chatcortex/optimization/: architecture_candidate.py  pareto.py
chatcortex/registry/: capability_registry.py  metadata.py
chatcortex/synthesis/: base.py  beam_synthesizer.py  budget.py  exhaustive_synthesizer.py  heuristic_synthesizer.py  pareto_partial_beam_synthesizer.py  pareto_partial_beam_synthesizer_v2.py  pareto_partial_beam_synthesizer_v3.py  progressive_pareto_beam_synthesizer.py  random_synthesizer.py  system_score_beam_synthesizer.py  task_specification.py
chatcortex/telemetry/: logger.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  trial.txt
