[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatcortex"
version = "0.2.0"
description = "Experimental platform for automated synthesis and evaluation of LLM-based agent systems"
authors = [{ name = "Siddharth Saraswat" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = []

[project.urls]
Homepage = "https://github.com/siddharth1012/chatCortex"