[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatcortex"
version = "0.4.0"
description = "Framework for multi-objective synthesis and optimization of AI agent architectures under bounded evaluation budgets"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "Siddharth Saraswat" }
]

keywords = [
    "automl",
    "multi-objective-optimization",
    "agent-architecture",
    "llm-agents",
    "pareto-optimization",
    "architecture-search",
    "beam-search",
    "ai-systems"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries"
]

dependencies = [
    "networkx>=2.8",
    "numpy>=1.23"
]

[project.optional-dependencies]

dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0"
]

viz = [
    "matplotlib>=3.7"
]

[project.urls]
Homepage = "https://github.com/siddharth1012/chatCortex"
Repository = "https://github.com/siddharth1012/chatCortex"
Issues = "https://github.com/siddharth1012/chatCortex/issues"

# -----------------------------
# setuptools configuration
# -----------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["chatcortex*"]

[tool.setuptools]
include-package-data = true